# JB-Data_Engineer-LUME

./: .env.example  .gitignore  .post-init.py  .scaffold.yml  ARCHITECTURE.md  BRIEF.md  Makefile  PROJECT_REPORT.docx  PROJECT_REPORT.md  README.md  compose.yml  pyproject.toml
backfill/: Dockerfile  pyproject.toml
backfill/app/: main.py
db/: Dockerfile  load_dimensions.py
db/migrations/: 001_init.sql
grafana/dashboards/: lume-operational.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
ingest/: Dockerfile  pyproject.toml
ingest/app/: main.py
queries/: defence_queries.sql
scheduler/: Dockerfile
scheduler/app/: main.py
spark/: Dockerfile  requirements.txt
spark/jobs/: db_writer.py  dedup.py  process.py  redis_state.py  validate.py
tools/: inject_demo.py
